# pickando-demo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build-wasm.sh  clippy.toml  deny.toml  docker-compose.yml  railway.json  rustfmt.toml  state.json
.git-hooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
android/: .gitignore  gradle.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: offline.html
android/app/src/main/java/com/pickando/demo/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
crates/backend/: Cargo.toml
crates/backend/src/: broadcast.rs  integration_tests.rs  lib.rs  main.rs  persistence.rs  routes.rs  seed.rs  state.rs  ws.rs
crates/frontend/: Cargo.toml  Dioxus.toml  index.html
crates/frontend/assets/: index.html  main.css  site.webmanifest  style.css  watchdog.js
crates/frontend/src/: api.rs  app.rs  icons.rs  main.rs  theme.rs
crates/frontend/src/components/: about.rs  dashboard.rs  driver.rs  feature_card.rs  footer.rs  landing.rs  login.rs  minimap.rs  mod.rs  navbar.rs  passenger.rs
crates/frontend/src/hooks/: mod.rs  use_api.rs
crates/frontend/src/landing/: mod.rs  page.rs
crates/frontend/src/mobile/: driver.rs  home.rs  mod.rs  passenger.rs  shell.rs
crates/frontend/src/platform/: about.rs  admin.rs  driver.rs  footer.rs  home.rs  mod.rs  navbar.rs  passenger.rs  shell.rs
crates/shared/: Cargo.toml
crates/shared/benches/: matching.rs
crates/shared/src/: lib.rs  matching.rs  models.rs  models_tests.rs
docs/: API.md  APK_SIGNING.md  ARCHITECTURE.md
docs/adr/: 0001-rust-dioxus-axum-stack.md  0002-workspace-layout.md  0003-in-memory-state.md  0004-android-webview-wrapper.md  0005-ws-typed-json-envelope.md  0006-geohash-haversine-matching.md  0007-request-body-validation-strategy.md  0008-cors-and-security-headers.md  0009-demo-reset-endpoint.md  0010-ui-ux-redesign-storytelling.md  0011-release-apk-signing-and-ci-verification.md  0012-strict-csp-wasm-unsafe-eval.md  0013-graceful-shutdown-and-fsync.md  README.md
scripts/: e2e-comprehensive.js  visual-validate.js
