[workspace]
resolver = "2"
members = ["crates/shared", "crates/backend", "crates/frontend"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/enerBydev/pickando-demo"
homepage = "https://pickando-demo.up.railway.app"
documentation = "https://github.com/enerBydev/pickando-demo#readme"
readme = "README.md"
keywords = ["rideshare", "mobility", "rust", "dioxus", "axum"]
categories = ["web-programming", "network-programming"]
authors = ["René Mendoza <enerBydev>"]
rust-version = "1.96"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

# Geospatial
geohash = "0.13"
geo-types = "0.7"

# Time
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }

# IDs
uuid = { version = "1", features = ["v4", "serde", "js"] }

# Dev
[profile.dev]
debug = 1
opt-level = 0
incremental = true

# Release — production builds
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Release for WASM — smaller binaries
[profile.release.package."pickando-frontend"]
opt-level = "s"
codegen-units = 16

# CI builds — faster, still correct
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
debug = false
strip = false
