[package]
name = "pickando-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pickando-backend"
path = "src/main.rs"

[lib]
name = "pickando_backend"
path = "src/lib.rs"

[dependencies]
pickando-shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
tower = "0.5"

[dev-dependencies]
http-body-util = "0.1"
