[package]
name = "pickando-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types and matching engine for Pickando — same-direction local mobility"
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
geohash = { workspace = true }
geo-types = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matching"
harness = false
